Add `count.txt` to `.gitignore`

--- a/.gitignore
+++ b/.gitignore
@@ -248,6 +248,10 @@ dmypy.json
 
 cython_debug/
 
+# Counting stats
+
+count.txt
+
 # PyCharm
 
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
